# scan-receipts

./: .env.example  .env.testing  .gitattributes  .gitignore  AI_EXTRACTION_INTEGRATION_GUIDE.md  CLAUDE.md  README.md  fields.json  gh.yaml  handle-review.sh  implement-ticket.sh  main.py  noxfile.py  pyproject.toml  pyrightconfig.json  pytest.ini  quality-results.json
.claude/: settings.json
.claude/agents/: advanced-software-engineer.md  git-project-navigator.md  ticket-refiner.md
.claude/commands/: design-c4-components.md  design-feature.md  design-implementation.md  extract-features.md  implement-feature.md  implement-ticket.md  implement-userstory.md  integrate-feature.md  refine-ticket.md  resolve-pr-comments.md
api_documentation/: document_discovery_api_documentation.md  document_repository_api_documentation.md  document_validation_api_documentation.md  receipt_document_processing_api_documentation.md
coder/: .gitignore  README.md  credentials.json.example  github_actions.py  handle-review.sh  implement-ticket.sh  implement_ticket.py  run_claude.py  ticket_info.json.example
coder/prompts/: check.md  code.md  complete_remaining.md  finalize-ticket.md  finish.md  handle-pull-request-comments.md  implement.md  prepare-git.md  verify-implementation.md
coder/rules/: generic_rules.md  (+1 more)
design/: PYTHON.md  c4_component_diagram.likec4  high_level_features.md  product_requirements.md  receipt_document_processing_user_stories.md  receipt_processor_docs.md
src/: __init__.py  main.py
stubs/: behave.pyi
tests/: __init__.py  test_receipt_processing_engine.py
(+253 files in other folders)
