[project]
name = "scan-receipts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.57.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.2",
    "pdf2image>=1.17.0",
    "pillow>=10.0.0",
    "mypy>=1.16.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "behave>=1.3.2",
    "rich>=14.1.0",
    "pytest-mock>=3.15.0",
    "claude-code-sdk>=0.0.22",
    "shortuuid>=1.0.13",
    "pygithub>=2.8.1",
]
